--- a/fundacao-bradesco/html-basico/Exerc1.html
+++ b/fundacao-bradesco/html-basico/Exerc1.html
@@ -5,7 +5,7 @@
 
     <body>
         <p>This is the first time I create a 
-page into this course</p>
+page into this course, copying the code</p>
         <p>Name: Samuel<br>
            Birth: 11/16/2000<br>
            Address: Manoel Ribeiro de Freitas Street</p>
