--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<html>
+    <head)>
+        <title>Samuel Gebing's blog - home page</title>
+    </head>
 
+    <body>
+<a href="samuelgebing.github.io/fundacao-bradesco/html-basico/modules.html">
+Modules from HTML Básico course from Fundação Bradesco</a>
+        <p>This is the first time I create a 
+page into this course</p>
+        <p>Name: Samuel<br>
+           Birth: 11/16/2000<br>
+           Address: Manoel Ribeiro de Freitas Street</p>
+    </body>
+</html>
