--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
 
     <body>
-<a href="https://samuelgebing.github.io/fundacao-bradesco/html-basico/modules.html">
+<a href="https://github.com/samuelgebing/samuelgebing.github.io/fundacao-bradesco/html-basico/modules.html">
 Modules from HTML Básico course from Fundação Bradesco</a>
         <p>This is the first time I create a 
 page into this course</p>
