--- a/fundacao-bradesco/html-basico/modules.html
+++ b/fundacao-bradesco/html-basico/modules.html
@@ -9,7 +9,7 @@ the HTML Básico course, from Fundação Bradesco</p>
         <p>
 Introduction
 HTML and the web
-            <a href="samuelgebing.github.io/fundacao-bradesco/html-basico/creating-a-html-document.html">
+            <a href="https://github.com/samuelgebing/samuelgebing.github.io/fundacao-bradesco/html-basico/creating-a-html-document.html">
                 Creating a document HTML
             </a><br>
         </p>
